refactor: 重构AI扫描流程，新增步骤执行器模式与多项优化
- 新增AI扫描步骤执行器框架，拆分编排逻辑与业务步骤
- 实现断点续传、术语服务、缓存预热等核心模块
- 优化资产发现并行处理、JavaParser线程安全与Neo4j批量写入
- 新增图谱窗口查询、节点邻域查询等API
- 完善测试覆盖与配置优化